--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 <p id="box-model-p">The CSS Box model comprise a set of properties which define parts of an element that take space on a webpage.</p>
 
                 <figure id="box-model-image">
-                    <img src="C:\Users\rexcr\OneDrive\Desktop\Projects\HTML-CSS_Cheat-Sheet\resources\images\Box-Model.jpg" width="800" height="430" alt="An image displaying a visual representation of the CSS-Box-Model.">
+                    <img src="./resources/images/Box-Model.jpg" width="800" height="430" alt="An image displaying a visual representation of the CSS-Box-Model.">
                     <figcaption id="box-model-caption">Visual Representation of the CSS Box-Model.</figcaption>
                 </figure> 
 
@@ -281,7 +281,7 @@
                         <h3 id="box-model-content-box-h3">Box-Model:Content-Box</h3>
 
                         <figure id="content-box-figure">
-                            <img src="C:\Users\rexcr\OneDrive\Desktop\Projects\HTML-CSS_Cheat-Sheet\resources\images\box-model-content-box.jpg" width="800" height="430" alt="An image displaying a visual representation of the CSS-Box-Model:Content-Box.">
+                            <img src="./resources/images/box-model-content-box.jpg" width="800" height="430" alt="An image displaying a visual representation of the CSS-Box-Model:Content-Box.">
                             <figcaption id="box-model-content-box-caption">Visual Representation of the CSS Box-Model:Content-Box.</figcaption>
                         </figure>
 
